--- a/editor-ui/src/index.css
+++ b/editor-ui/src/index.css
@@ -60,6 +60,7 @@
 .vce-sidebar-tab {
   flex: 1;
   justify-content: center;
+  padding: var(--LAYOUT--spacing--2) 0 var(--LAYOUT--spacing--5) 0 !important;
 }
 
 .vce-sidebar-content {
